# llm-gateway

./: .gitignore  Cargo.toml  README.md  config.toml
.qwen/: QWEN.md  settings.json
crates/config/src/: admin.rs  backend.rs  error.rs  health.rs  input.rs  lib.rs  node.rs
crates/protocols/: Cargo.toml
crates/protocols/src/: lib.rs  sse.rs
crates/protocols/src/functions/: mod.rs  request.rs  response.rs  streaming.rs
crates/statistics/: Cargo.toml
crates/statistics/src/: aggregator.rs  config.rs  event.rs  lib.rs  main.rs  query.rs  sqlite.rs  store.rs
crates/statistics/src/cli/: commands.rs  formatter.rs  mod.rs  repl.rs
docs/design/: 2026-04-01-pingora-refactor-design.md  2026-04-01-poc-plan.md  current-architecture.md  statistics-api-design.md
docs/plan/: 2026-03-protocols-phase1.md
docs/protocols/: anthropic.md  openai.md
docs/superpowers/plans/: 2026-03-24-llm-gateway-config-tdd.md
docs/usage/: admin-api.md
src/: backend_node.rs  concurrency_node.rs  error.rs  health_monitor.rs  input_node.rs  lib.rs  logger.rs  main.rs  sequence_node.rs  serve.rs
src/api/: admin.rs  handlers.rs  middleware.rs  mod.rs
