[workspace]

[package]
name = "llm-gateway"
version = "0.0.0"
edition = "2024"

[dependencies]
llm-gateway-protocols.path = "crates/protocols"
llm-gateway-config.path = "crates/config"

serde = "1.0"
serde_json = "1.0"
thiserror = "1.0"

hyper = { version = "1.8", features = ["http1", "server", "client"] }
hyper-util = { version = "0.1", features = [
    "http1",
    "tokio",
    "server",
    "client-legacy",
] }
http = "1"
http-body-util = "0.1"
tokio = { version = "1.50", features = ["rt-multi-thread", "net", "macros"] }
tokio-stream = "0.1"
bytes = "1.0"

log = "0.4"
flexi_logger = "0.31"
colored = "3.1"
